# libdispatch

./: .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  TESTING.md  config.h.cmake.in  configure  configure.ac  index.html  params.json  runtime.c
Grand Central Dispatch.pages/thumbs/: PageCapThumb-1.tiff  page_thumb_1-3.tiff
cmake/: BuildUtil.cmake  FindBlocksRuntime.cmake  Findkqueue.cmake  Findpthread_workqueue.cmake
config/: CMakeLists.txt  config.cmake  config.cmake.jinja  config.cnf  config.h.cmake.in  config.h.in  config.yaml  regen_config.py  regen_config.sh
config/j2cli/: j2cli.py
config/j2cli/plugins/: filters.py
dispatch/: CMakeLists.txt  data.h  dispatch.h  io.h  object.h  queue.h
doc/: A Guide to Blocks & Grand Central Dispatch.pages  Building with Blocks in C and Objective-C.webarchive  Grand Central Dispatch- Exciting or Overhyped?  Grand Central Dispatch：來自作業系統底層的簡潔與優雅.pages  Introducing Blocks and Grand Central Dispatch  Introducing Blocks and Grand Central Dispatch.webarchive  libdispatch vs. the Uberqueue  readme
doc/libdispatch.svn/.svn/: wc.db
doc/opengcd/.svn/: wc.db
doc/opengcd/branches/android/makeconf/: makeconf.rb
doc/opengcd/branches/android/makeconf/.svn/: wc.db
doc/opengcd/tags/REL_0_1/makeconf/.svn/: wc.db
doc/opengcd/tags/REL_0_1/makeconf/makeconf/: installer.rb
doc/opengcd/trunk/makeconf/.svn/: wc.db
doc/opengcd/trunk/makeconf/makeconf/: library.rb
doc/xdispatch/.svn/: wc.db
doc/xdispatch/docs/: Doxyfile  header.tex  layout.xml
doc/xdispatch/libdispatch/platform/darwin/: semaphore.c
doc/xdispatch/libdispatch/platform/windows/: pthread_rw_lock.h  pthread_tls.h  times.h
doc/xdispatch/libdispatch/src/: queue.c
doc/xdispatch/libpthread_workqueue/src/windows/: pthread_create.h  pthread_mutex.h  pthread_rw_lock.h
doc/xdispatch/libpthread_workqueue/testing/api/: test_api.vcxproj
doc/xdispatch/libxdispatch/: version.rc.in
doc/xdispatch/tests/munit/: MUnit.h
fixincludes/: unistd.h
include/sys/: event.h
libdispatch.xcodeproj/: jackie.mode1v3  jackie.pbxuser
man/: CMakeLists.txt  create_man_symlinks.cmake.in
os/: CMakeLists.txt  object_private.h
private/: data_private.h  io_private.h
scripts/: README.md  gen_test_configs.py  gen_version_scripts.py  libdispatch_globals.regex  libdispatch_globals.version  partial_link_archive.py  static_link.py
src/: CMakeLists.txt  allocator.c  allocator_internal.h  api.c  data.c  data_internal.h  init.c  internal.h  io.c  io_internal.h  object.c  queue.c  queue_internal.h  semaphore.c  semaphore_internal.h  shims.h  source.c  source_internal.h  time.c  transform.c
src/common/: filter.c  map.c  private.h
src/linux/: read.c  write.c
src/posix/: manager.c
src/shims/: atomic_sfb.h  hw_config.h  pthread_main_np.h  strlcpy.h  time.h  tsd.h
src/windows/: platform.c  read.c  user.c
test/: common.h  kevent.cpp  main.cpp  read.cpp  vnode.cpp
testing/: CMakeLists.txt  Makefile.am  bsdtestharness.c  bsdtests.c  bsdtests.h  conftest.py  dispatch_after.c  dispatch_api.c  dispatch_apply.c  dispatch_concur.c  dispatch_data.c  dispatch_drift.c  dispatch_group.c  dispatch_io.c  dispatch_io_net.c  dispatch_overcommit.c  dispatch_priority.c  dispatch_proc.c  dispatch_read2.c  dispatch_readsync.c  dispatch_vm.c  dispatch_vnode.c  pytest.ini  run_tests.py  test_dispatch.py
testing/api/: test.c
testing/latency/: latency.c
testing/shims/: arc4random.c
